Knife tool not working properly #37510

Closed
opened 2013-11-18 09:44:57 +01:00 by Nikolay Naidenov · 15 comments

Operating System:
Ubuntu Release 12.04 (precise) 64-bit
Kernel Linux 3.2.0-49-generic
GNOME 3.4.2

Blender Version: 2.69.2

Knife Tool Bug:
When using the Shift+K function and cut trough the whole object it doesn't cut trough some of the small faces (small compared to the rest of the object and the viewport) and it is not a problem with the object, it has been tested on other objects on different scenes and computers. I am applying a set of screenshot for beter explenation:
Knife_1.jpg

Knife_2.jpg

Knife_3.jpg

Thank you for your time :) !

Operating System: Ubuntu Release 12.04 (precise) 64-bit Kernel Linux 3.2.0-49-generic GNOME 3.4.2 Blender Version: 2.69.2 Knife Tool Bug: When using the Shift+K function and cut trough the whole object it doesn't cut trough some of the small faces (small compared to the rest of the object and the viewport) and it is not a problem with the object, it has been tested on other objects on different scenes and computers. I am applying a set of screenshot for beter explenation: ![Knife_1.jpg](https://archive.blender.org/developer/F28339/Knife_1.jpg) ![Knife_2.jpg](https://archive.blender.org/developer/F28340/Knife_2.jpg) ![Knife_3.jpg](https://archive.blender.org/developer/F28341/Knife_3.jpg) Thank you for your time :) !

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @kirompower

Added subscriber: @kirompower
Howard Trickey was assigned by Brecht Van Lommel 2013-11-18 10:39:57 +01:00
Member

kirompower, please reply and attach the .blend file that has the object in question, or any object that exhibits the bug. It is hard for me to reproduce such bugs without a .blend file.

kirompower, please reply and attach the .blend file that has the object in question, or any object that exhibits the bug. It is hard for me to reproduce such bugs without a .blend file.

Here yoy go :) One object duplicated twice, one is the original and the other one is when it is already cuted ( I have deleted the faces below the cut line for better illustration of the bug )

1.blend

And if you want to make a object yourself here is a quick example: make a cube 1x1 meters, then Ctrl+A and S so it is in scale, then in edit mode apply bevel with offset of 0.0015 (1.5mm) and 3 segments and thats it, if you try and cut the whole cube with shift+K all the way trough it will leave some of the small "beveled" faces uncut.

Thank you :)

Here yoy go :) One object duplicated twice, one is the original and the other one is when it is already cuted ( I have deleted the faces below the cut line for better illustration of the bug ) [1.blend](https://archive.blender.org/developer/F28457/1.blend) And if you want to make a object yourself here is a quick example: make a cube 1x1 meters, then Ctrl+A and S so it is in scale, then in edit mode apply bevel with offset of 0.0015 (1.5mm) and 3 segments and thats it, if you try and cut the whole cube with shift+K all the way trough it will leave some of the small "beveled" faces uncut. Thank you :)
Member

Are you sure there are faces there? After doing the cut, I deleted all the faces below the cut. I couldn't see any left that hadn't been cut. There are some edges left, but those don't seem to be attached to faces.

Are you sure there are faces there? After doing the cut, I deleted all the faces below the cut. I couldn't see any left that hadn't been cut. There are some edges left, but those don't seem to be attached to faces.

Yep, there are faces, i think it is visible in the blend file I previously uploaded, but here are some screenshots to make sure

Screen_01.jpg

Screen_02.jpg

Thank you for your time :)

Yep, there are faces, i think it is visible in the blend file I previously uploaded, but here are some screenshots to make sure ![Screen_01.jpg](https://archive.blender.org/developer/F33533/Screen_01.jpg) ![Screen_02.jpg](https://archive.blender.org/developer/F33535/Screen_02.jpg) Thank you for your time :)

I tested the same problem on the test build (2.7 from the link: http://download.blender.org/release/Blender2.70/) and it is still present, I have attached a video showcasing the problem.

Screencast_2014-02-24_16:50:37.mp4

Operating System:
Ubuntu Release 12.04 (precise) 64-bit
Kernel Linux 3.2.0-49-generic
GNOME 3.4.2

I tested the same problem on the test build (2.7 from the link: http://download.blender.org/release/Blender2.70/) and it is still present, I have attached a video showcasing the problem. [Screencast_2014-02-24_16:50:37.mp4](https://archive.blender.org/developer/F78753/Screencast_2014-02-24_16_50_37.mp4) Operating System: Ubuntu Release 12.04 (precise) 64-bit Kernel Linux 3.2.0-49-generic GNOME 3.4.2
Member

I looked at this a bit, and think that the problem is that the distances involved are tiny, and we start to run into difficulties because of single-precision floating point tolerances. I don't know if I can find an easy fix.

I looked at this a bit, and think that the problem is that the distances involved are tiny, and we start to run into difficulties because of single-precision floating point tolerances. I don't know if I can find an easy fix.

I don't know if this might help, but I am curently running v2.68 and it works fine.
Also I noticed that the problem seems to be relative to the object, I mean if I my cube is 10 times bigger and then I do the bevel again 10 times bigger, the knife tool still won't cut trough the small faces, despite they are now 10 times bigger but still relatively small to the cube (for example my original cube is 2x2 meters and the bevel was 1.5mm, if I make a cube 20x20meters and do a bevel of 1.5 cm the problem is still there)
Thank you for your time

I don't know if this might help, but I am curently running v2.68 and it works fine. Also I noticed that the problem seems to be relative to the object, I mean if I my cube is 10 times bigger and then I do the bevel again 10 times bigger, the knife tool still won't cut trough the small faces, despite they are now 10 times bigger but still relatively small to the cube (for example my original cube is 2x2 meters and the bevel was 1.5mm, if I make a cube 20x20meters and do a bevel of 1.5 cm the problem is still there) Thank you for your time

Is there any way I can increase that precision ?

Is there any way I can increase that precision ?

This issue was referenced by blender/blender-addons-contrib@c1be7e12ee

This issue was referenced by blender/blender-addons-contrib@c1be7e12ee3cb853769f63d4da1747b838908411

This issue was referenced by c1be7e12ee

This issue was referenced by c1be7e12ee3cb853769f63d4da1747b838908411
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit c1be7e12ee.

Closed by commit c1be7e12ee.
Member

I found my problem and fixed it with c1be7e12ee

I found my problem and fixed it with c1be7e12ee
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37510
No description provided.